// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getUI5Versions No filter options, all supported versions returned 1`] = `
[
  {
    "version": "1.109.3",
  },
  {
    "version": "1.109.2",
  },
  {
    "version": "1.109.1",
  },
  {
    "version": "1.109.0",
  },
  {
    "version": "1.108.4",
  },
  {
    "version": "1.108.3",
  },
  {
    "version": "1.108.2",
  },
  {
    "version": "1.108.1",
  },
  {
    "version": "1.108.0",
  },
  {
    "version": "1.107.1",
  },
  {
    "version": "1.107.0",
  },
  {
    "version": "1.106.1",
  },
  {
    "version": "1.106.0",
  },
  {
    "version": "1.105.4",
  },
  {
    "version": "1.105.3",
  },
  {
    "version": "1.105.2",
  },
  {
    "version": "1.105.1",
  },
  {
    "version": "1.105.0",
  },
  {
    "version": "1.104.2",
  },
  {
    "version": "1.104.1",
  },
  {
    "version": "1.104.0",
  },
  {
    "version": "1.103.1",
  },
  {
    "version": "1.103.0",
  },
  {
    "version": "1.102.13",
  },
  {
    "version": "1.102.12",
  },
  {
    "version": "1.102.11",
  },
  {
    "version": "1.102.10",
  },
  {
    "version": "1.102.9",
  },
  {
    "version": "1.102.8",
  },
  {
    "version": "1.102.7",
  },
  {
    "version": "1.102.6",
  },
  {
    "version": "1.102.5",
  },
  {
    "version": "1.102.4",
  },
  {
    "version": "1.102.3",
  },
  {
    "version": "1.102.2",
  },
  {
    "version": "1.102.1",
  },
  {
    "version": "1.102.0",
  },
  {
    "version": "1.101.1",
  },
  {
    "version": "1.101.0",
  },
  {
    "version": "1.100.2",
  },
  {
    "version": "1.100.1",
  },
  {
    "version": "1.100.0",
  },
  {
    "version": "1.99.4",
  },
  {
    "version": "1.99.3",
  },
  {
    "version": "1.99.2",
  },
  {
    "version": "1.99.1",
  },
  {
    "version": "1.99.0",
  },
  {
    "version": "1.98.0",
  },
  {
    "version": "1.97.2",
  },
  {
    "version": "1.97.1",
  },
  {
    "version": "1.97.0",
  },
  {
    "version": "1.96.16",
  },
  {
    "version": "1.96.15",
  },
  {
    "version": "1.96.14",
  },
  {
    "version": "1.96.13",
  },
  {
    "version": "1.96.12",
  },
  {
    "version": "1.96.11",
  },
  {
    "version": "1.96.10",
  },
  {
    "version": "1.96.9",
  },
  {
    "version": "1.96.8",
  },
  {
    "version": "1.96.7",
  },
  {
    "version": "1.96.6",
  },
  {
    "version": "1.96.5",
  },
  {
    "version": "1.96.4",
  },
  {
    "version": "1.96.3",
  },
  {
    "version": "1.96.2",
  },
  {
    "version": "1.96.1",
  },
  {
    "version": "1.96.0",
  },
  {
    "version": "1.95.0",
  },
  {
    "version": "1.94.1",
  },
  {
    "version": "1.93.7",
  },
  {
    "version": "1.93.6",
  },
  {
    "version": "1.93.5",
  },
  {
    "version": "1.93.4",
  },
  {
    "version": "1.93.3",
  },
  {
    "version": "1.93.2",
  },
  {
    "version": "1.93.0",
  },
  {
    "version": "1.92.2",
  },
  {
    "version": "1.92.1",
  },
  {
    "version": "1.92.0",
  },
  {
    "version": "1.91.1",
  },
  {
    "version": "1.90.14",
  },
  {
    "version": "1.90.13",
  },
  {
    "version": "1.90.12",
  },
  {
    "version": "1.90.11",
  },
  {
    "version": "1.90.10",
  },
  {
    "version": "1.90.9",
  },
  {
    "version": "1.90.8",
  },
  {
    "version": "1.90.7",
  },
  {
    "version": "1.90.6",
  },
  {
    "version": "1.90.0",
  },
  {
    "version": "1.87.7",
  },
  {
    "version": "1.84.31",
  },
  {
    "version": "1.84.30",
  },
  {
    "version": "1.84.29",
  },
  {
    "version": "1.84.28",
  },
  {
    "version": "1.84.27",
  },
  {
    "version": "1.84.26",
  },
  {
    "version": "1.84.25",
  },
  {
    "version": "1.84.24",
  },
  {
    "version": "1.84.23",
  },
  {
    "version": "1.84.22",
  },
  {
    "version": "1.84.21",
  },
  {
    "version": "1.84.20",
  },
  {
    "version": "1.84.19",
  },
  {
    "version": "1.84.16",
  },
  {
    "version": "1.84.13",
  },
  {
    "version": "1.84.8",
  },
  {
    "version": "1.84.3",
  },
  {
    "version": "1.84.1",
  },
  {
    "version": "1.84.0",
  },
  {
    "version": "1.82.0",
  },
  {
    "version": "1.80.0",
  },
  {
    "version": "1.78.9",
  },
  {
    "version": "1.75.0",
  },
  {
    "version": "1.74.0",
  },
  {
    "version": "1.73.1",
  },
  {
    "version": "1.71.53",
  },
  {
    "version": "1.71.52",
  },
  {
    "version": "1.71.51",
  },
  {
    "version": "1.71.50",
  },
  {
    "version": "1.71.49",
  },
  {
    "version": "1.71.48",
  },
  {
    "version": "1.71.47",
  },
  {
    "version": "1.71.46",
  },
  {
    "version": "1.71.45",
  },
  {
    "version": "1.71.44",
  },
  {
    "version": "1.71.43",
  },
  {
    "version": "1.71.42",
  },
  {
    "version": "1.71.41",
  },
  {
    "version": "1.71.40",
  },
  {
    "version": "1.71.39",
  },
  {
    "version": "1.71.36",
  },
  {
    "version": "1.71.35",
  },
  {
    "version": "1.71.33",
  },
  {
    "version": "1.71.30",
  },
  {
    "version": "1.71.29",
  },
  {
    "version": "1.71.24",
  },
  {
    "version": "1.71.23",
  },
  {
    "version": "1.71.22",
  },
  {
    "version": "1.71.17",
  },
  {
    "version": "1.71.9",
  },
  {
    "version": "1.71.5",
  },
  {
    "version": "1.71.2",
  },
  {
    "version": "1.65.1",
  },
]
`;

exports[`getUI5Versions filterOptions: \`onlyLatestPatchVersion\` 1`] = `
[
  {
    "version": "1.109.3",
  },
  {
    "version": "1.108.4",
  },
  {
    "version": "1.107.1",
  },
  {
    "version": "1.106.1",
  },
  {
    "version": "1.105.4",
  },
  {
    "version": "1.104.2",
  },
  {
    "version": "1.103.1",
  },
  {
    "version": "1.102.13",
  },
  {
    "version": "1.101.1",
  },
  {
    "version": "1.100.2",
  },
  {
    "version": "1.99.4",
  },
  {
    "version": "1.98.0",
  },
  {
    "version": "1.97.2",
  },
  {
    "version": "1.96.16",
  },
  {
    "version": "1.95.0",
  },
  {
    "version": "1.94.1",
  },
  {
    "version": "1.93.7",
  },
  {
    "version": "1.92.2",
  },
  {
    "version": "1.91.1",
  },
  {
    "version": "1.90.14",
  },
  {
    "version": "1.87.7",
  },
  {
    "version": "1.84.31",
  },
  {
    "version": "1.82.0",
  },
  {
    "version": "1.80.0",
  },
  {
    "version": "1.78.9",
  },
  {
    "version": "1.75.0",
  },
  {
    "version": "1.74.0",
  },
  {
    "version": "1.73.1",
  },
  {
    "version": "1.71.53",
  },
  {
    "version": "1.65.1",
  },
]
`;

exports[`getUI5Versions filterOptions: \`onlyVersionNumbers\` takes precedence, snapshots versions removed - snapshotVersionsHost, onlyVersionNumbers 1`] = `
[
  {
    "version": "1.109.3",
  },
  {
    "version": "1.109.2",
  },
  {
    "version": "1.109.1",
  },
  {
    "version": "1.109.0",
  },
  {
    "version": "1.108.4",
  },
  {
    "version": "1.108.3",
  },
  {
    "version": "1.108.2",
  },
  {
    "version": "1.108.1",
  },
  {
    "version": "1.108.0",
  },
  {
    "version": "1.107.1",
  },
  {
    "version": "1.107.0",
  },
  {
    "version": "1.106.1",
  },
  {
    "version": "1.106.0",
  },
  {
    "version": "1.105.4",
  },
  {
    "version": "1.105.3",
  },
  {
    "version": "1.105.2",
  },
  {
    "version": "1.105.1",
  },
  {
    "version": "1.105.0",
  },
  {
    "version": "1.104.2",
  },
  {
    "version": "1.104.1",
  },
  {
    "version": "1.104.0",
  },
  {
    "version": "1.103.1",
  },
  {
    "version": "1.103.0",
  },
  {
    "version": "1.102.13",
  },
  {
    "version": "1.102.12",
  },
  {
    "version": "1.102.11",
  },
  {
    "version": "1.102.10",
  },
  {
    "version": "1.102.9",
  },
  {
    "version": "1.102.8",
  },
  {
    "version": "1.102.7",
  },
  {
    "version": "1.102.6",
  },
  {
    "version": "1.102.5",
  },
  {
    "version": "1.102.4",
  },
  {
    "version": "1.102.3",
  },
  {
    "version": "1.102.2",
  },
  {
    "version": "1.102.1",
  },
  {
    "version": "1.102.0",
  },
  {
    "version": "1.101.1",
  },
  {
    "version": "1.101.0",
  },
  {
    "version": "1.100.2",
  },
  {
    "version": "1.100.1",
  },
  {
    "version": "1.100.0",
  },
  {
    "version": "1.99.4",
  },
  {
    "version": "1.99.3",
  },
  {
    "version": "1.99.2",
  },
  {
    "version": "1.99.1",
  },
  {
    "version": "1.99.0",
  },
  {
    "version": "1.98.0",
  },
  {
    "version": "1.97.2",
  },
  {
    "version": "1.97.1",
  },
  {
    "version": "1.97.0",
  },
  {
    "version": "1.96.16",
  },
  {
    "version": "1.96.15",
  },
  {
    "version": "1.96.14",
  },
  {
    "version": "1.96.13",
  },
  {
    "version": "1.96.12",
  },
  {
    "version": "1.96.11",
  },
  {
    "version": "1.96.10",
  },
  {
    "version": "1.96.9",
  },
  {
    "version": "1.96.8",
  },
  {
    "version": "1.96.7",
  },
  {
    "version": "1.96.6",
  },
  {
    "version": "1.96.5",
  },
  {
    "version": "1.96.4",
  },
  {
    "version": "1.96.3",
  },
  {
    "version": "1.96.2",
  },
  {
    "version": "1.96.1",
  },
  {
    "version": "1.96.0",
  },
  {
    "version": "1.95.0",
  },
  {
    "version": "1.94.1",
  },
  {
    "version": "1.93.7",
  },
  {
    "version": "1.93.6",
  },
  {
    "version": "1.93.5",
  },
  {
    "version": "1.93.4",
  },
  {
    "version": "1.93.3",
  },
  {
    "version": "1.93.2",
  },
  {
    "version": "1.93.0",
  },
  {
    "version": "1.92.2",
  },
  {
    "version": "1.92.1",
  },
  {
    "version": "1.92.0",
  },
  {
    "version": "1.91.1",
  },
  {
    "version": "1.90.14",
  },
  {
    "version": "1.90.13",
  },
  {
    "version": "1.90.12",
  },
  {
    "version": "1.90.11",
  },
  {
    "version": "1.90.10",
  },
  {
    "version": "1.90.9",
  },
  {
    "version": "1.90.8",
  },
  {
    "version": "1.90.7",
  },
  {
    "version": "1.90.6",
  },
  {
    "version": "1.90.0",
  },
  {
    "version": "1.87.7",
  },
  {
    "version": "1.84.31",
  },
  {
    "version": "1.84.30",
  },
  {
    "version": "1.84.29",
  },
  {
    "version": "1.84.28",
  },
  {
    "version": "1.84.27",
  },
  {
    "version": "1.84.26",
  },
  {
    "version": "1.84.25",
  },
  {
    "version": "1.84.24",
  },
  {
    "version": "1.84.23",
  },
  {
    "version": "1.84.22",
  },
  {
    "version": "1.84.21",
  },
  {
    "version": "1.84.20",
  },
  {
    "version": "1.84.19",
  },
  {
    "version": "1.84.16",
  },
  {
    "version": "1.84.13",
  },
  {
    "version": "1.84.8",
  },
  {
    "version": "1.84.3",
  },
  {
    "version": "1.84.1",
  },
  {
    "version": "1.84.0",
  },
  {
    "version": "1.82.0",
  },
  {
    "version": "1.80.0",
  },
  {
    "version": "1.78.9",
  },
  {
    "version": "1.75.0",
  },
  {
    "version": "1.74.0",
  },
  {
    "version": "1.73.1",
  },
  {
    "version": "1.71.53",
  },
  {
    "version": "1.71.52",
  },
  {
    "version": "1.71.51",
  },
  {
    "version": "1.71.50",
  },
  {
    "version": "1.71.49",
  },
  {
    "version": "1.71.48",
  },
  {
    "version": "1.71.47",
  },
  {
    "version": "1.71.46",
  },
  {
    "version": "1.71.45",
  },
  {
    "version": "1.71.44",
  },
  {
    "version": "1.71.43",
  },
  {
    "version": "1.71.42",
  },
  {
    "version": "1.71.41",
  },
  {
    "version": "1.71.40",
  },
  {
    "version": "1.71.39",
  },
  {
    "version": "1.71.36",
  },
  {
    "version": "1.71.35",
  },
  {
    "version": "1.71.33",
  },
  {
    "version": "1.71.30",
  },
  {
    "version": "1.71.29",
  },
  {
    "version": "1.71.24",
  },
  {
    "version": "1.71.23",
  },
  {
    "version": "1.71.22",
  },
  {
    "version": "1.71.17",
  },
  {
    "version": "1.71.9",
  },
  {
    "version": "1.71.5",
  },
  {
    "version": "1.71.2",
  },
  {
    "version": "1.65.1",
  },
]
`;

exports[`getUI5Versions filterOptions: all available versions -  minSupportedVersion: \`1.0.0\` 1`] = `
[
  {
    "version": "1.109.3",
  },
  {
    "version": "1.109.2",
  },
  {
    "version": "1.109.1",
  },
  {
    "version": "1.109.0",
  },
  {
    "version": "1.108.4",
  },
  {
    "version": "1.108.3",
  },
  {
    "version": "1.108.2",
  },
  {
    "version": "1.108.1",
  },
  {
    "version": "1.108.0",
  },
  {
    "version": "1.107.1",
  },
  {
    "version": "1.107.0",
  },
  {
    "version": "1.106.1",
  },
  {
    "version": "1.106.0",
  },
  {
    "version": "1.105.4",
  },
  {
    "version": "1.105.3",
  },
  {
    "version": "1.105.2",
  },
  {
    "version": "1.105.1",
  },
  {
    "version": "1.105.0",
  },
  {
    "version": "1.104.2",
  },
  {
    "version": "1.104.1",
  },
  {
    "version": "1.104.0",
  },
  {
    "version": "1.103.1",
  },
  {
    "version": "1.103.0",
  },
  {
    "version": "1.102.13",
  },
  {
    "version": "1.102.12",
  },
  {
    "version": "1.102.11",
  },
  {
    "version": "1.102.10",
  },
  {
    "version": "1.102.9",
  },
  {
    "version": "1.102.8",
  },
  {
    "version": "1.102.7",
  },
  {
    "version": "1.102.6",
  },
  {
    "version": "1.102.5",
  },
  {
    "version": "1.102.4",
  },
  {
    "version": "1.102.3",
  },
  {
    "version": "1.102.2",
  },
  {
    "version": "1.102.1",
  },
  {
    "version": "1.102.0",
  },
  {
    "version": "1.101.1",
  },
  {
    "version": "1.101.0",
  },
  {
    "version": "1.100.2",
  },
  {
    "version": "1.100.1",
  },
  {
    "version": "1.100.0",
  },
  {
    "version": "1.99.4",
  },
  {
    "version": "1.99.3",
  },
  {
    "version": "1.99.2",
  },
  {
    "version": "1.99.1",
  },
  {
    "version": "1.99.0",
  },
  {
    "version": "1.98.0",
  },
  {
    "version": "1.97.2",
  },
  {
    "version": "1.97.1",
  },
  {
    "version": "1.97.0",
  },
  {
    "version": "1.96.16",
  },
  {
    "version": "1.96.15",
  },
  {
    "version": "1.96.14",
  },
  {
    "version": "1.96.13",
  },
  {
    "version": "1.96.12",
  },
  {
    "version": "1.96.11",
  },
  {
    "version": "1.96.10",
  },
  {
    "version": "1.96.9",
  },
  {
    "version": "1.96.8",
  },
  {
    "version": "1.96.7",
  },
  {
    "version": "1.96.6",
  },
  {
    "version": "1.96.5",
  },
  {
    "version": "1.96.4",
  },
  {
    "version": "1.96.3",
  },
  {
    "version": "1.96.2",
  },
  {
    "version": "1.96.1",
  },
  {
    "version": "1.96.0",
  },
  {
    "version": "1.95.0",
  },
  {
    "version": "1.94.1",
  },
  {
    "version": "1.93.7",
  },
  {
    "version": "1.93.6",
  },
  {
    "version": "1.93.5",
  },
  {
    "version": "1.93.4",
  },
  {
    "version": "1.93.3",
  },
  {
    "version": "1.93.2",
  },
  {
    "version": "1.93.0",
  },
  {
    "version": "1.92.2",
  },
  {
    "version": "1.92.1",
  },
  {
    "version": "1.92.0",
  },
  {
    "version": "1.91.1",
  },
  {
    "version": "1.90.14",
  },
  {
    "version": "1.90.13",
  },
  {
    "version": "1.90.12",
  },
  {
    "version": "1.90.11",
  },
  {
    "version": "1.90.10",
  },
  {
    "version": "1.90.9",
  },
  {
    "version": "1.90.8",
  },
  {
    "version": "1.90.7",
  },
  {
    "version": "1.90.6",
  },
  {
    "version": "1.90.0",
  },
  {
    "version": "1.87.7",
  },
  {
    "version": "1.84.31",
  },
  {
    "version": "1.84.30",
  },
  {
    "version": "1.84.29",
  },
  {
    "version": "1.84.28",
  },
  {
    "version": "1.84.27",
  },
  {
    "version": "1.84.26",
  },
  {
    "version": "1.84.25",
  },
  {
    "version": "1.84.24",
  },
  {
    "version": "1.84.23",
  },
  {
    "version": "1.84.22",
  },
  {
    "version": "1.84.21",
  },
  {
    "version": "1.84.20",
  },
  {
    "version": "1.84.19",
  },
  {
    "version": "1.84.16",
  },
  {
    "version": "1.84.13",
  },
  {
    "version": "1.84.8",
  },
  {
    "version": "1.84.3",
  },
  {
    "version": "1.84.1",
  },
  {
    "version": "1.84.0",
  },
  {
    "version": "1.82.0",
  },
  {
    "version": "1.80.0",
  },
  {
    "version": "1.78.9",
  },
  {
    "version": "1.75.0",
  },
  {
    "version": "1.74.0",
  },
  {
    "version": "1.73.1",
  },
  {
    "version": "1.71.53",
  },
  {
    "version": "1.71.52",
  },
  {
    "version": "1.71.51",
  },
  {
    "version": "1.71.50",
  },
  {
    "version": "1.71.49",
  },
  {
    "version": "1.71.48",
  },
  {
    "version": "1.71.47",
  },
  {
    "version": "1.71.46",
  },
  {
    "version": "1.71.45",
  },
  {
    "version": "1.71.44",
  },
  {
    "version": "1.71.43",
  },
  {
    "version": "1.71.42",
  },
  {
    "version": "1.71.41",
  },
  {
    "version": "1.71.40",
  },
  {
    "version": "1.71.39",
  },
  {
    "version": "1.71.36",
  },
  {
    "version": "1.71.35",
  },
  {
    "version": "1.71.33",
  },
  {
    "version": "1.71.30",
  },
  {
    "version": "1.71.29",
  },
  {
    "version": "1.71.24",
  },
  {
    "version": "1.71.23",
  },
  {
    "version": "1.71.22",
  },
  {
    "version": "1.71.17",
  },
  {
    "version": "1.71.9",
  },
  {
    "version": "1.71.5",
  },
  {
    "version": "1.71.2",
  },
  {
    "version": "1.65.1",
  },
  {
    "version": "1.60.44",
  },
  {
    "version": "1.60.43",
  },
  {
    "version": "1.60.41",
  },
  {
    "version": "1.60.40",
  },
  {
    "version": "1.60.38",
  },
  {
    "version": "1.60.29",
  },
  {
    "version": "1.60.14",
  },
  {
    "version": "1.60.1",
  },
  {
    "version": "1.56.12",
  },
  {
    "version": "1.56.11",
  },
  {
    "version": "1.56.9",
  },
  {
    "version": "1.56.6",
  },
  {
    "version": "1.52.51",
  },
  {
    "version": "1.44.51",
  },
  {
    "version": "1.38.59",
  },
  {
    "version": "1.38.58",
  },
  {
    "version": "1.38.57",
  },
  {
    "version": "1.38.56",
  },
  {
    "version": "1.38.55",
  },
  {
    "version": "1.38.54",
  },
  {
    "version": "1.38.53",
  },
  {
    "version": "1.38.48",
  },
  {
    "version": "1.38.47",
  },
  {
    "version": "1.38.40",
  },
  {
    "version": "1.38.5",
  },
]
`;

exports[`getUI5Versions filterOptions: loads and use cached versions - useCache: true 1`] = `
[
  {
    "version": "1.109.3",
  },
  {
    "version": "1.109.2",
  },
  {
    "version": "1.109.1",
  },
  {
    "version": "1.109.0",
  },
  {
    "version": "1.108.4",
  },
  {
    "version": "1.108.3",
  },
  {
    "version": "1.108.2",
  },
  {
    "version": "1.108.1",
  },
  {
    "version": "1.108.0",
  },
  {
    "version": "1.107.1",
  },
  {
    "version": "1.107.0",
  },
  {
    "version": "1.106.1",
  },
  {
    "version": "1.106.0",
  },
  {
    "version": "1.105.4",
  },
  {
    "version": "1.105.3",
  },
  {
    "version": "1.105.2",
  },
  {
    "version": "1.105.1",
  },
  {
    "version": "1.105.0",
  },
  {
    "version": "1.104.2",
  },
  {
    "version": "1.104.1",
  },
  {
    "version": "1.104.0",
  },
  {
    "version": "1.103.1",
  },
  {
    "version": "1.103.0",
  },
  {
    "version": "1.102.13",
  },
  {
    "version": "1.102.12",
  },
  {
    "version": "1.102.11",
  },
  {
    "version": "1.102.10",
  },
  {
    "version": "1.102.9",
  },
  {
    "version": "1.102.8",
  },
  {
    "version": "1.102.7",
  },
  {
    "version": "1.102.6",
  },
  {
    "version": "1.102.5",
  },
  {
    "version": "1.102.4",
  },
  {
    "version": "1.102.3",
  },
  {
    "version": "1.102.2",
  },
  {
    "version": "1.102.1",
  },
  {
    "version": "1.102.0",
  },
  {
    "version": "1.101.1",
  },
  {
    "version": "1.101.0",
  },
  {
    "version": "1.100.2",
  },
  {
    "version": "1.100.1",
  },
  {
    "version": "1.100.0",
  },
  {
    "version": "1.99.4",
  },
  {
    "version": "1.99.3",
  },
  {
    "version": "1.99.2",
  },
  {
    "version": "1.99.1",
  },
  {
    "version": "1.99.0",
  },
  {
    "version": "1.98.0",
  },
  {
    "version": "1.97.2",
  },
  {
    "version": "1.97.1",
  },
  {
    "version": "1.97.0",
  },
  {
    "version": "1.96.16",
  },
  {
    "version": "1.96.15",
  },
  {
    "version": "1.96.14",
  },
  {
    "version": "1.96.13",
  },
  {
    "version": "1.96.12",
  },
  {
    "version": "1.96.11",
  },
  {
    "version": "1.96.10",
  },
  {
    "version": "1.96.9",
  },
  {
    "version": "1.96.8",
  },
  {
    "version": "1.96.7",
  },
  {
    "version": "1.96.6",
  },
  {
    "version": "1.96.5",
  },
  {
    "version": "1.96.4",
  },
  {
    "version": "1.96.3",
  },
  {
    "version": "1.96.2",
  },
  {
    "version": "1.96.1",
  },
  {
    "version": "1.96.0",
  },
  {
    "version": "1.95.0",
  },
  {
    "version": "1.94.1",
  },
  {
    "version": "1.93.7",
  },
  {
    "version": "1.93.6",
  },
  {
    "version": "1.93.5",
  },
  {
    "version": "1.93.4",
  },
  {
    "version": "1.93.3",
  },
  {
    "version": "1.93.2",
  },
  {
    "version": "1.93.0",
  },
  {
    "version": "1.92.2",
  },
  {
    "version": "1.92.1",
  },
  {
    "version": "1.92.0",
  },
  {
    "version": "1.91.1",
  },
  {
    "version": "1.90.14",
  },
  {
    "version": "1.90.13",
  },
  {
    "version": "1.90.12",
  },
  {
    "version": "1.90.11",
  },
  {
    "version": "1.90.10",
  },
  {
    "version": "1.90.9",
  },
  {
    "version": "1.90.8",
  },
  {
    "version": "1.90.7",
  },
  {
    "version": "1.90.6",
  },
  {
    "version": "1.90.0",
  },
  {
    "version": "1.87.7",
  },
  {
    "version": "1.84.31",
  },
  {
    "version": "1.84.30",
  },
  {
    "version": "1.84.29",
  },
  {
    "version": "1.84.28",
  },
  {
    "version": "1.84.27",
  },
  {
    "version": "1.84.26",
  },
  {
    "version": "1.84.25",
  },
  {
    "version": "1.84.24",
  },
  {
    "version": "1.84.23",
  },
  {
    "version": "1.84.22",
  },
  {
    "version": "1.84.21",
  },
  {
    "version": "1.84.20",
  },
  {
    "version": "1.84.19",
  },
  {
    "version": "1.84.16",
  },
  {
    "version": "1.84.13",
  },
  {
    "version": "1.84.8",
  },
  {
    "version": "1.84.3",
  },
  {
    "version": "1.84.1",
  },
  {
    "version": "1.84.0",
  },
  {
    "version": "1.82.0",
  },
  {
    "version": "1.80.0",
  },
  {
    "version": "1.78.9",
  },
  {
    "version": "1.75.0",
  },
  {
    "version": "1.74.0",
  },
  {
    "version": "1.73.1",
  },
  {
    "version": "1.71.53",
  },
  {
    "version": "1.71.52",
  },
  {
    "version": "1.71.51",
  },
  {
    "version": "1.71.50",
  },
  {
    "version": "1.71.49",
  },
  {
    "version": "1.71.48",
  },
  {
    "version": "1.71.47",
  },
  {
    "version": "1.71.46",
  },
  {
    "version": "1.71.45",
  },
  {
    "version": "1.71.44",
  },
  {
    "version": "1.71.43",
  },
  {
    "version": "1.71.42",
  },
  {
    "version": "1.71.41",
  },
  {
    "version": "1.71.40",
  },
  {
    "version": "1.71.39",
  },
  {
    "version": "1.71.36",
  },
  {
    "version": "1.71.35",
  },
  {
    "version": "1.71.33",
  },
  {
    "version": "1.71.30",
  },
  {
    "version": "1.71.29",
  },
  {
    "version": "1.71.24",
  },
  {
    "version": "1.71.23",
  },
  {
    "version": "1.71.22",
  },
  {
    "version": "1.71.17",
  },
  {
    "version": "1.71.9",
  },
  {
    "version": "1.71.5",
  },
  {
    "version": "1.71.2",
  },
  {
    "version": "1.65.1",
  },
]
`;

exports[`getUI5Versions filterOptions: loads and use cached versions - useCache: true 2`] = `
[
  {
    "version": "snapshot",
  },
  {
    "version": "snapshot-untested",
  },
  {
    "version": "1.109.3",
  },
  {
    "version": "1.109.2",
  },
  {
    "version": "1.109.1",
  },
  {
    "version": "1.109.0",
  },
  {
    "version": "1.108.4",
  },
  {
    "version": "1.108.3",
  },
  {
    "version": "1.108.2",
  },
  {
    "version": "1.108.1",
  },
  {
    "version": "1.108.0",
  },
  {
    "version": "1.107.1",
  },
  {
    "version": "1.107.0",
  },
  {
    "version": "1.106.1",
  },
  {
    "version": "1.106.0",
  },
  {
    "version": "1.105.4",
  },
  {
    "version": "1.105.3",
  },
  {
    "version": "1.105.2",
  },
  {
    "version": "1.105.1",
  },
  {
    "version": "1.105.0",
  },
  {
    "version": "1.104.2",
  },
  {
    "version": "1.104.1",
  },
  {
    "version": "1.104.0",
  },
  {
    "version": "1.103.1",
  },
  {
    "version": "1.103.0",
  },
  {
    "version": "1.102.13",
  },
  {
    "version": "1.102.12",
  },
  {
    "version": "1.102.11",
  },
  {
    "version": "1.102.10",
  },
  {
    "version": "1.102.9",
  },
  {
    "version": "1.102.8",
  },
  {
    "version": "1.102.7",
  },
  {
    "version": "1.102.6",
  },
  {
    "version": "1.102.5",
  },
  {
    "version": "1.102.4",
  },
  {
    "version": "1.102.3",
  },
  {
    "version": "1.102.2",
  },
  {
    "version": "1.102.1",
  },
  {
    "version": "1.102.0",
  },
  {
    "version": "1.101.1",
  },
  {
    "version": "1.101.0",
  },
  {
    "version": "1.100.2",
  },
  {
    "version": "1.100.1",
  },
  {
    "version": "1.100.0",
  },
  {
    "version": "1.99.4",
  },
  {
    "version": "1.99.3",
  },
  {
    "version": "1.99.2",
  },
  {
    "version": "1.99.1",
  },
  {
    "version": "1.99.0",
  },
  {
    "version": "1.98.0",
  },
  {
    "version": "1.97.2",
  },
  {
    "version": "1.97.1",
  },
  {
    "version": "1.97.0",
  },
  {
    "version": "1.96.16",
  },
  {
    "version": "1.96.15",
  },
  {
    "version": "1.96.14",
  },
  {
    "version": "1.96.13",
  },
  {
    "version": "1.96.12",
  },
  {
    "version": "1.96.11",
  },
  {
    "version": "1.96.10",
  },
  {
    "version": "1.96.9",
  },
  {
    "version": "1.96.8",
  },
  {
    "version": "1.96.7",
  },
  {
    "version": "1.96.6",
  },
  {
    "version": "1.96.5",
  },
  {
    "version": "1.96.4",
  },
  {
    "version": "1.96.3",
  },
  {
    "version": "1.96.2",
  },
  {
    "version": "1.96.1",
  },
  {
    "version": "1.96.0",
  },
  {
    "version": "1.95.0",
  },
  {
    "version": "1.94.1",
  },
  {
    "version": "1.93.7",
  },
  {
    "version": "1.93.6",
  },
  {
    "version": "1.93.5",
  },
  {
    "version": "1.93.4",
  },
  {
    "version": "1.93.3",
  },
  {
    "version": "1.93.2",
  },
  {
    "version": "1.93.0",
  },
  {
    "version": "1.92.2",
  },
  {
    "version": "1.92.1",
  },
  {
    "version": "1.92.0",
  },
  {
    "version": "1.91.1",
  },
  {
    "version": "1.90.14",
  },
  {
    "version": "1.90.13",
  },
  {
    "version": "1.90.12",
  },
  {
    "version": "1.90.11",
  },
  {
    "version": "1.90.10",
  },
  {
    "version": "1.90.9",
  },
  {
    "version": "1.90.8",
  },
  {
    "version": "1.90.7",
  },
  {
    "version": "1.90.6",
  },
  {
    "version": "1.90.0",
  },
  {
    "version": "1.87.7",
  },
  {
    "version": "1.84.31",
  },
  {
    "version": "1.84.30",
  },
  {
    "version": "1.84.29",
  },
  {
    "version": "1.84.28",
  },
  {
    "version": "1.84.27",
  },
  {
    "version": "1.84.26",
  },
  {
    "version": "1.84.25",
  },
  {
    "version": "1.84.24",
  },
  {
    "version": "1.84.23",
  },
  {
    "version": "1.84.22",
  },
  {
    "version": "1.84.21",
  },
  {
    "version": "1.84.20",
  },
  {
    "version": "1.84.19",
  },
  {
    "version": "1.84.16",
  },
  {
    "version": "1.84.13",
  },
  {
    "version": "1.84.8",
  },
  {
    "version": "1.84.3",
  },
  {
    "version": "1.84.1",
  },
  {
    "version": "1.84.0",
  },
  {
    "version": "snapshot-1.83",
  },
  {
    "version": "snapshot-1.82",
  },
  {
    "version": "1.82.0",
  },
  {
    "version": "snapshot-1.81",
  },
  {
    "version": "snapshot-1.80",
  },
  {
    "version": "1.80.0",
  },
  {
    "version": "snapshot-1.79",
  },
  {
    "version": "snapshot-1.78",
  },
  {
    "version": "1.78.9",
  },
  {
    "version": "snapshot-1.77",
  },
  {
    "version": "snapshot-1.76",
  },
  {
    "version": "snapshot-1.75",
  },
  {
    "version": "1.75.0",
  },
  {
    "version": "snapshot-1.74",
  },
  {
    "version": "1.74.0",
  },
  {
    "version": "snapshot-1.73",
  },
  {
    "version": "1.73.1",
  },
  {
    "version": "snapshot-1.72",
  },
  {
    "version": "snapshot-1.71",
  },
  {
    "version": "1.71.53",
  },
  {
    "version": "1.71.52",
  },
  {
    "version": "1.71.51",
  },
  {
    "version": "1.71.50",
  },
  {
    "version": "1.71.49",
  },
  {
    "version": "1.71.48",
  },
  {
    "version": "1.71.47",
  },
  {
    "version": "1.71.46",
  },
  {
    "version": "1.71.45",
  },
  {
    "version": "1.71.44",
  },
  {
    "version": "1.71.43",
  },
  {
    "version": "1.71.42",
  },
  {
    "version": "1.71.41",
  },
  {
    "version": "1.71.40",
  },
  {
    "version": "1.71.39",
  },
  {
    "version": "1.71.36",
  },
  {
    "version": "1.71.35",
  },
  {
    "version": "1.71.33",
  },
  {
    "version": "1.71.30",
  },
  {
    "version": "1.71.29",
  },
  {
    "version": "1.71.24",
  },
  {
    "version": "1.71.23",
  },
  {
    "version": "1.71.22",
  },
  {
    "version": "1.71.17",
  },
  {
    "version": "1.71.9",
  },
  {
    "version": "1.71.5",
  },
  {
    "version": "1.71.2",
  },
  {
    "version": "snapshot-1.70",
  },
  {
    "version": "snapshot-1.69",
  },
  {
    "version": "snapshot-1.68",
  },
  {
    "version": "snapshot-1.67",
  },
  {
    "version": "snapshot-1.66",
  },
  {
    "version": "snapshot-1.65",
  },
  {
    "version": "1.65.1",
  },
]
`;

exports[`getUI5Versions filterOptions: loads and use cached versions - useCache: true 3`] = `
[
  {
    "maintained": true,
    "version": "1.109.3",
  },
  {
    "maintained": true,
    "version": "1.109.2",
  },
  {
    "maintained": true,
    "version": "1.109.1",
  },
  {
    "maintained": true,
    "version": "1.109.0",
  },
  {
    "maintained": true,
    "version": "1.108.4",
  },
  {
    "maintained": true,
    "version": "1.108.3",
  },
  {
    "maintained": true,
    "version": "1.108.2",
  },
  {
    "maintained": true,
    "version": "1.108.1",
  },
  {
    "maintained": true,
    "version": "1.108.0",
  },
  {
    "maintained": false,
    "version": "1.107.1",
  },
  {
    "maintained": false,
    "version": "1.107.0",
  },
  {
    "maintained": false,
    "version": "1.106.1",
  },
  {
    "maintained": false,
    "version": "1.106.0",
  },
  {
    "maintained": true,
    "version": "1.105.4",
  },
  {
    "maintained": true,
    "version": "1.105.3",
  },
  {
    "maintained": true,
    "version": "1.105.2",
  },
  {
    "maintained": true,
    "version": "1.105.1",
  },
  {
    "maintained": true,
    "version": "1.105.0",
  },
  {
    "maintained": false,
    "version": "1.104.2",
  },
  {
    "maintained": false,
    "version": "1.104.1",
  },
  {
    "maintained": false,
    "version": "1.104.0",
  },
  {
    "maintained": false,
    "version": "1.103.1",
  },
  {
    "maintained": false,
    "version": "1.103.0",
  },
  {
    "maintained": true,
    "version": "1.102.13",
  },
  {
    "maintained": true,
    "version": "1.102.12",
  },
  {
    "maintained": true,
    "version": "1.102.11",
  },
  {
    "maintained": true,
    "version": "1.102.10",
  },
  {
    "maintained": true,
    "version": "1.102.9",
  },
  {
    "maintained": true,
    "version": "1.102.8",
  },
  {
    "maintained": true,
    "version": "1.102.7",
  },
  {
    "maintained": true,
    "version": "1.102.6",
  },
  {
    "maintained": true,
    "version": "1.102.5",
  },
  {
    "maintained": true,
    "version": "1.102.4",
  },
  {
    "maintained": true,
    "version": "1.102.3",
  },
  {
    "maintained": true,
    "version": "1.102.2",
  },
  {
    "maintained": true,
    "version": "1.102.1",
  },
  {
    "maintained": true,
    "version": "1.102.0",
  },
  {
    "maintained": false,
    "version": "1.101.1",
  },
  {
    "maintained": false,
    "version": "1.101.0",
  },
  {
    "maintained": false,
    "version": "1.100.2",
  },
  {
    "maintained": false,
    "version": "1.100.1",
  },
  {
    "maintained": false,
    "version": "1.100.0",
  },
  {
    "maintained": false,
    "version": "1.99.4",
  },
  {
    "maintained": false,
    "version": "1.99.3",
  },
  {
    "maintained": false,
    "version": "1.99.2",
  },
  {
    "maintained": false,
    "version": "1.99.1",
  },
  {
    "maintained": false,
    "version": "1.99.0",
  },
  {
    "maintained": false,
    "version": "1.98.0",
  },
  {
    "maintained": false,
    "version": "1.97.2",
  },
  {
    "maintained": false,
    "version": "1.97.1",
  },
  {
    "maintained": false,
    "version": "1.97.0",
  },
  {
    "maintained": true,
    "version": "1.96.16",
  },
  {
    "maintained": true,
    "version": "1.96.15",
  },
  {
    "maintained": true,
    "version": "1.96.14",
  },
  {
    "maintained": true,
    "version": "1.96.13",
  },
  {
    "maintained": true,
    "version": "1.96.12",
  },
  {
    "maintained": true,
    "version": "1.96.11",
  },
  {
    "maintained": true,
    "version": "1.96.10",
  },
  {
    "maintained": true,
    "version": "1.96.9",
  },
  {
    "maintained": true,
    "version": "1.96.8",
  },
  {
    "maintained": true,
    "version": "1.96.7",
  },
  {
    "maintained": true,
    "version": "1.96.6",
  },
  {
    "maintained": true,
    "version": "1.96.5",
  },
  {
    "maintained": true,
    "version": "1.96.4",
  },
  {
    "maintained": true,
    "version": "1.96.3",
  },
  {
    "maintained": true,
    "version": "1.96.2",
  },
  {
    "maintained": true,
    "version": "1.96.1",
  },
  {
    "maintained": true,
    "version": "1.96.0",
  },
  {
    "maintained": false,
    "version": "1.95.0",
  },
  {
    "maintained": false,
    "version": "1.94.1",
  },
  {
    "maintained": false,
    "version": "1.93.7",
  },
  {
    "maintained": false,
    "version": "1.93.6",
  },
  {
    "maintained": false,
    "version": "1.93.5",
  },
  {
    "maintained": false,
    "version": "1.93.4",
  },
  {
    "maintained": false,
    "version": "1.93.3",
  },
  {
    "maintained": false,
    "version": "1.93.2",
  },
  {
    "maintained": false,
    "version": "1.93.0",
  },
  {
    "maintained": false,
    "version": "1.92.2",
  },
  {
    "maintained": false,
    "version": "1.92.1",
  },
  {
    "maintained": false,
    "version": "1.92.0",
  },
  {
    "maintained": false,
    "version": "1.91.1",
  },
  {
    "maintained": false,
    "version": "1.90.14",
  },
  {
    "maintained": false,
    "version": "1.90.13",
  },
  {
    "maintained": false,
    "version": "1.90.12",
  },
  {
    "maintained": false,
    "version": "1.90.11",
  },
  {
    "maintained": false,
    "version": "1.90.10",
  },
  {
    "maintained": false,
    "version": "1.90.9",
  },
  {
    "maintained": false,
    "version": "1.90.8",
  },
  {
    "maintained": false,
    "version": "1.90.7",
  },
  {
    "maintained": false,
    "version": "1.90.6",
  },
  {
    "maintained": false,
    "version": "1.90.0",
  },
  {
    "maintained": false,
    "version": "1.87.7",
  },
  {
    "maintained": true,
    "version": "1.84.31",
  },
  {
    "maintained": true,
    "version": "1.84.30",
  },
  {
    "maintained": true,
    "version": "1.84.29",
  },
  {
    "maintained": true,
    "version": "1.84.28",
  },
  {
    "maintained": true,
    "version": "1.84.27",
  },
  {
    "maintained": true,
    "version": "1.84.26",
  },
  {
    "maintained": true,
    "version": "1.84.25",
  },
  {
    "maintained": true,
    "version": "1.84.24",
  },
  {
    "maintained": true,
    "version": "1.84.23",
  },
  {
    "maintained": true,
    "version": "1.84.22",
  },
  {
    "maintained": true,
    "version": "1.84.21",
  },
  {
    "maintained": true,
    "version": "1.84.20",
  },
  {
    "maintained": true,
    "version": "1.84.19",
  },
  {
    "maintained": true,
    "version": "1.84.16",
  },
  {
    "maintained": true,
    "version": "1.84.13",
  },
  {
    "maintained": true,
    "version": "1.84.8",
  },
  {
    "maintained": true,
    "version": "1.84.3",
  },
  {
    "maintained": true,
    "version": "1.84.1",
  },
  {
    "maintained": true,
    "version": "1.84.0",
  },
  {
    "maintained": false,
    "version": "1.82.0",
  },
  {
    "maintained": false,
    "version": "1.80.0",
  },
  {
    "maintained": false,
    "version": "1.78.9",
  },
  {
    "maintained": false,
    "version": "1.75.0",
  },
  {
    "maintained": false,
    "version": "1.74.0",
  },
  {
    "maintained": false,
    "version": "1.73.1",
  },
  {
    "maintained": true,
    "version": "1.71.53",
  },
  {
    "maintained": true,
    "version": "1.71.52",
  },
  {
    "maintained": true,
    "version": "1.71.51",
  },
  {
    "maintained": true,
    "version": "1.71.50",
  },
  {
    "maintained": true,
    "version": "1.71.49",
  },
  {
    "maintained": true,
    "version": "1.71.48",
  },
  {
    "maintained": true,
    "version": "1.71.47",
  },
  {
    "maintained": true,
    "version": "1.71.46",
  },
  {
    "maintained": true,
    "version": "1.71.45",
  },
  {
    "maintained": true,
    "version": "1.71.44",
  },
  {
    "maintained": true,
    "version": "1.71.43",
  },
  {
    "maintained": true,
    "version": "1.71.42",
  },
  {
    "maintained": true,
    "version": "1.71.41",
  },
  {
    "maintained": true,
    "version": "1.71.40",
  },
  {
    "maintained": true,
    "version": "1.71.39",
  },
  {
    "maintained": true,
    "version": "1.71.36",
  },
  {
    "maintained": true,
    "version": "1.71.35",
  },
  {
    "maintained": true,
    "version": "1.71.33",
  },
  {
    "maintained": true,
    "version": "1.71.30",
  },
  {
    "maintained": true,
    "version": "1.71.29",
  },
  {
    "maintained": true,
    "version": "1.71.24",
  },
  {
    "maintained": true,
    "version": "1.71.23",
  },
  {
    "maintained": true,
    "version": "1.71.22",
  },
  {
    "maintained": true,
    "version": "1.71.17",
  },
  {
    "maintained": true,
    "version": "1.71.9",
  },
  {
    "maintained": true,
    "version": "1.71.5",
  },
  {
    "maintained": true,
    "version": "1.71.2",
  },
  {
    "maintained": false,
    "version": "1.65.1",
  },
]
`;

exports[`getUI5Versions filterOptions: returns support info - includeMaintained 1`] = `
[
  {
    "maintained": true,
    "version": "1.109.3",
  },
  {
    "maintained": true,
    "version": "1.109.2",
  },
  {
    "maintained": true,
    "version": "1.109.1",
  },
  {
    "maintained": true,
    "version": "1.109.0",
  },
  {
    "maintained": true,
    "version": "1.108.4",
  },
  {
    "maintained": true,
    "version": "1.108.3",
  },
  {
    "maintained": true,
    "version": "1.108.2",
  },
  {
    "maintained": true,
    "version": "1.108.1",
  },
  {
    "maintained": true,
    "version": "1.108.0",
  },
  {
    "maintained": false,
    "version": "1.107.1",
  },
  {
    "maintained": false,
    "version": "1.107.0",
  },
  {
    "maintained": false,
    "version": "1.106.1",
  },
  {
    "maintained": false,
    "version": "1.106.0",
  },
  {
    "maintained": true,
    "version": "1.105.4",
  },
  {
    "maintained": true,
    "version": "1.105.3",
  },
  {
    "maintained": true,
    "version": "1.105.2",
  },
  {
    "maintained": true,
    "version": "1.105.1",
  },
  {
    "maintained": true,
    "version": "1.105.0",
  },
  {
    "maintained": false,
    "version": "1.104.2",
  },
  {
    "maintained": false,
    "version": "1.104.1",
  },
  {
    "maintained": false,
    "version": "1.104.0",
  },
  {
    "maintained": false,
    "version": "1.103.1",
  },
  {
    "maintained": false,
    "version": "1.103.0",
  },
  {
    "maintained": true,
    "version": "1.102.13",
  },
  {
    "maintained": true,
    "version": "1.102.12",
  },
  {
    "maintained": true,
    "version": "1.102.11",
  },
  {
    "maintained": true,
    "version": "1.102.10",
  },
  {
    "maintained": true,
    "version": "1.102.9",
  },
  {
    "maintained": true,
    "version": "1.102.8",
  },
  {
    "maintained": true,
    "version": "1.102.7",
  },
  {
    "maintained": true,
    "version": "1.102.6",
  },
  {
    "maintained": true,
    "version": "1.102.5",
  },
  {
    "maintained": true,
    "version": "1.102.4",
  },
  {
    "maintained": true,
    "version": "1.102.3",
  },
  {
    "maintained": true,
    "version": "1.102.2",
  },
  {
    "maintained": true,
    "version": "1.102.1",
  },
  {
    "maintained": true,
    "version": "1.102.0",
  },
  {
    "maintained": false,
    "version": "1.101.1",
  },
  {
    "maintained": false,
    "version": "1.101.0",
  },
  {
    "maintained": false,
    "version": "1.100.2",
  },
  {
    "maintained": false,
    "version": "1.100.1",
  },
  {
    "maintained": false,
    "version": "1.100.0",
  },
  {
    "maintained": false,
    "version": "1.99.4",
  },
  {
    "maintained": false,
    "version": "1.99.3",
  },
  {
    "maintained": false,
    "version": "1.99.2",
  },
  {
    "maintained": false,
    "version": "1.99.1",
  },
  {
    "maintained": false,
    "version": "1.99.0",
  },
  {
    "maintained": false,
    "version": "1.98.0",
  },
  {
    "maintained": false,
    "version": "1.97.2",
  },
  {
    "maintained": false,
    "version": "1.97.1",
  },
  {
    "maintained": false,
    "version": "1.97.0",
  },
  {
    "maintained": true,
    "version": "1.96.16",
  },
  {
    "maintained": true,
    "version": "1.96.15",
  },
  {
    "maintained": true,
    "version": "1.96.14",
  },
  {
    "maintained": true,
    "version": "1.96.13",
  },
  {
    "maintained": true,
    "version": "1.96.12",
  },
  {
    "maintained": true,
    "version": "1.96.11",
  },
  {
    "maintained": true,
    "version": "1.96.10",
  },
  {
    "maintained": true,
    "version": "1.96.9",
  },
  {
    "maintained": true,
    "version": "1.96.8",
  },
  {
    "maintained": true,
    "version": "1.96.7",
  },
  {
    "maintained": true,
    "version": "1.96.6",
  },
  {
    "maintained": true,
    "version": "1.96.5",
  },
  {
    "maintained": true,
    "version": "1.96.4",
  },
  {
    "maintained": true,
    "version": "1.96.3",
  },
  {
    "maintained": true,
    "version": "1.96.2",
  },
  {
    "maintained": true,
    "version": "1.96.1",
  },
  {
    "maintained": true,
    "version": "1.96.0",
  },
  {
    "maintained": false,
    "version": "1.95.0",
  },
  {
    "maintained": false,
    "version": "1.94.1",
  },
  {
    "maintained": false,
    "version": "1.93.7",
  },
  {
    "maintained": false,
    "version": "1.93.6",
  },
  {
    "maintained": false,
    "version": "1.93.5",
  },
  {
    "maintained": false,
    "version": "1.93.4",
  },
  {
    "maintained": false,
    "version": "1.93.3",
  },
  {
    "maintained": false,
    "version": "1.93.2",
  },
  {
    "maintained": false,
    "version": "1.93.0",
  },
  {
    "maintained": false,
    "version": "1.92.2",
  },
  {
    "maintained": false,
    "version": "1.92.1",
  },
  {
    "maintained": false,
    "version": "1.92.0",
  },
  {
    "maintained": false,
    "version": "1.91.1",
  },
  {
    "maintained": false,
    "version": "1.90.14",
  },
  {
    "maintained": false,
    "version": "1.90.13",
  },
  {
    "maintained": false,
    "version": "1.90.12",
  },
  {
    "maintained": false,
    "version": "1.90.11",
  },
  {
    "maintained": false,
    "version": "1.90.10",
  },
  {
    "maintained": false,
    "version": "1.90.9",
  },
  {
    "maintained": false,
    "version": "1.90.8",
  },
  {
    "maintained": false,
    "version": "1.90.7",
  },
  {
    "maintained": false,
    "version": "1.90.6",
  },
  {
    "maintained": false,
    "version": "1.90.0",
  },
  {
    "maintained": false,
    "version": "1.87.7",
  },
  {
    "maintained": true,
    "version": "1.84.31",
  },
  {
    "maintained": true,
    "version": "1.84.30",
  },
  {
    "maintained": true,
    "version": "1.84.29",
  },
  {
    "maintained": true,
    "version": "1.84.28",
  },
  {
    "maintained": true,
    "version": "1.84.27",
  },
  {
    "maintained": true,
    "version": "1.84.26",
  },
  {
    "maintained": true,
    "version": "1.84.25",
  },
  {
    "maintained": true,
    "version": "1.84.24",
  },
  {
    "maintained": true,
    "version": "1.84.23",
  },
  {
    "maintained": true,
    "version": "1.84.22",
  },
  {
    "maintained": true,
    "version": "1.84.21",
  },
  {
    "maintained": true,
    "version": "1.84.20",
  },
  {
    "maintained": true,
    "version": "1.84.19",
  },
  {
    "maintained": true,
    "version": "1.84.16",
  },
  {
    "maintained": true,
    "version": "1.84.13",
  },
  {
    "maintained": true,
    "version": "1.84.8",
  },
  {
    "maintained": true,
    "version": "1.84.3",
  },
  {
    "maintained": true,
    "version": "1.84.1",
  },
  {
    "maintained": true,
    "version": "1.84.0",
  },
  {
    "maintained": false,
    "version": "1.82.0",
  },
  {
    "maintained": false,
    "version": "1.80.0",
  },
  {
    "maintained": false,
    "version": "1.78.9",
  },
  {
    "maintained": false,
    "version": "1.75.0",
  },
  {
    "maintained": false,
    "version": "1.74.0",
  },
  {
    "maintained": false,
    "version": "1.73.1",
  },
  {
    "maintained": true,
    "version": "1.71.53",
  },
  {
    "maintained": true,
    "version": "1.71.52",
  },
  {
    "maintained": true,
    "version": "1.71.51",
  },
  {
    "maintained": true,
    "version": "1.71.50",
  },
  {
    "maintained": true,
    "version": "1.71.49",
  },
  {
    "maintained": true,
    "version": "1.71.48",
  },
  {
    "maintained": true,
    "version": "1.71.47",
  },
  {
    "maintained": true,
    "version": "1.71.46",
  },
  {
    "maintained": true,
    "version": "1.71.45",
  },
  {
    "maintained": true,
    "version": "1.71.44",
  },
  {
    "maintained": true,
    "version": "1.71.43",
  },
  {
    "maintained": true,
    "version": "1.71.42",
  },
  {
    "maintained": true,
    "version": "1.71.41",
  },
  {
    "maintained": true,
    "version": "1.71.40",
  },
  {
    "maintained": true,
    "version": "1.71.39",
  },
  {
    "maintained": true,
    "version": "1.71.36",
  },
  {
    "maintained": true,
    "version": "1.71.35",
  },
  {
    "maintained": true,
    "version": "1.71.33",
  },
  {
    "maintained": true,
    "version": "1.71.30",
  },
  {
    "maintained": true,
    "version": "1.71.29",
  },
  {
    "maintained": true,
    "version": "1.71.24",
  },
  {
    "maintained": true,
    "version": "1.71.23",
  },
  {
    "maintained": true,
    "version": "1.71.22",
  },
  {
    "maintained": true,
    "version": "1.71.17",
  },
  {
    "maintained": true,
    "version": "1.71.9",
  },
  {
    "maintained": true,
    "version": "1.71.5",
  },
  {
    "maintained": true,
    "version": "1.71.2",
  },
  {
    "maintained": false,
    "version": "1.65.1",
  },
]
`;

exports[`getUI5Versions filterOptions: snapshots included - snapshotVersionsHost 1`] = `
[
  {
    "version": "snapshot",
  },
  {
    "version": "snapshot-untested",
  },
  {
    "version": "1.109.3",
  },
  {
    "version": "1.109.2",
  },
  {
    "version": "1.109.1",
  },
  {
    "version": "1.109.0",
  },
  {
    "version": "1.108.4",
  },
  {
    "version": "1.108.3",
  },
  {
    "version": "1.108.2",
  },
  {
    "version": "1.108.1",
  },
  {
    "version": "1.108.0",
  },
  {
    "version": "1.107.1",
  },
  {
    "version": "1.107.0",
  },
  {
    "version": "1.106.1",
  },
  {
    "version": "1.106.0",
  },
  {
    "version": "1.105.4",
  },
  {
    "version": "1.105.3",
  },
  {
    "version": "1.105.2",
  },
  {
    "version": "1.105.1",
  },
  {
    "version": "1.105.0",
  },
  {
    "version": "1.104.2",
  },
  {
    "version": "1.104.1",
  },
  {
    "version": "1.104.0",
  },
  {
    "version": "1.103.1",
  },
  {
    "version": "1.103.0",
  },
  {
    "version": "1.102.13",
  },
  {
    "version": "1.102.12",
  },
  {
    "version": "1.102.11",
  },
  {
    "version": "1.102.10",
  },
  {
    "version": "1.102.9",
  },
  {
    "version": "1.102.8",
  },
  {
    "version": "1.102.7",
  },
  {
    "version": "1.102.6",
  },
  {
    "version": "1.102.5",
  },
  {
    "version": "1.102.4",
  },
  {
    "version": "1.102.3",
  },
  {
    "version": "1.102.2",
  },
  {
    "version": "1.102.1",
  },
  {
    "version": "1.102.0",
  },
  {
    "version": "1.101.1",
  },
  {
    "version": "1.101.0",
  },
  {
    "version": "1.100.2",
  },
  {
    "version": "1.100.1",
  },
  {
    "version": "1.100.0",
  },
  {
    "version": "1.99.4",
  },
  {
    "version": "1.99.3",
  },
  {
    "version": "1.99.2",
  },
  {
    "version": "1.99.1",
  },
  {
    "version": "1.99.0",
  },
  {
    "version": "1.98.0",
  },
  {
    "version": "1.97.2",
  },
  {
    "version": "1.97.1",
  },
  {
    "version": "1.97.0",
  },
  {
    "version": "1.96.16",
  },
  {
    "version": "1.96.15",
  },
  {
    "version": "1.96.14",
  },
  {
    "version": "1.96.13",
  },
  {
    "version": "1.96.12",
  },
  {
    "version": "1.96.11",
  },
  {
    "version": "1.96.10",
  },
  {
    "version": "1.96.9",
  },
  {
    "version": "1.96.8",
  },
  {
    "version": "1.96.7",
  },
  {
    "version": "1.96.6",
  },
  {
    "version": "1.96.5",
  },
  {
    "version": "1.96.4",
  },
  {
    "version": "1.96.3",
  },
  {
    "version": "1.96.2",
  },
  {
    "version": "1.96.1",
  },
  {
    "version": "1.96.0",
  },
  {
    "version": "1.95.0",
  },
  {
    "version": "1.94.1",
  },
  {
    "version": "1.93.7",
  },
  {
    "version": "1.93.6",
  },
  {
    "version": "1.93.5",
  },
  {
    "version": "1.93.4",
  },
  {
    "version": "1.93.3",
  },
  {
    "version": "1.93.2",
  },
  {
    "version": "1.93.0",
  },
  {
    "version": "1.92.2",
  },
  {
    "version": "1.92.1",
  },
  {
    "version": "1.92.0",
  },
  {
    "version": "1.91.1",
  },
  {
    "version": "1.90.14",
  },
  {
    "version": "1.90.13",
  },
  {
    "version": "1.90.12",
  },
  {
    "version": "1.90.11",
  },
  {
    "version": "1.90.10",
  },
  {
    "version": "1.90.9",
  },
  {
    "version": "1.90.8",
  },
  {
    "version": "1.90.7",
  },
  {
    "version": "1.90.6",
  },
  {
    "version": "1.90.0",
  },
  {
    "version": "1.87.7",
  },
  {
    "version": "1.84.31",
  },
  {
    "version": "1.84.30",
  },
  {
    "version": "1.84.29",
  },
  {
    "version": "1.84.28",
  },
  {
    "version": "1.84.27",
  },
  {
    "version": "1.84.26",
  },
  {
    "version": "1.84.25",
  },
  {
    "version": "1.84.24",
  },
  {
    "version": "1.84.23",
  },
  {
    "version": "1.84.22",
  },
  {
    "version": "1.84.21",
  },
  {
    "version": "1.84.20",
  },
  {
    "version": "1.84.19",
  },
  {
    "version": "1.84.16",
  },
  {
    "version": "1.84.13",
  },
  {
    "version": "1.84.8",
  },
  {
    "version": "1.84.3",
  },
  {
    "version": "1.84.1",
  },
  {
    "version": "1.84.0",
  },
  {
    "version": "snapshot-1.83",
  },
  {
    "version": "snapshot-1.82",
  },
  {
    "version": "1.82.0",
  },
  {
    "version": "snapshot-1.81",
  },
  {
    "version": "snapshot-1.80",
  },
  {
    "version": "1.80.0",
  },
  {
    "version": "snapshot-1.79",
  },
  {
    "version": "snapshot-1.78",
  },
  {
    "version": "1.78.9",
  },
  {
    "version": "snapshot-1.77",
  },
  {
    "version": "snapshot-1.76",
  },
  {
    "version": "snapshot-1.75",
  },
  {
    "version": "1.75.0",
  },
  {
    "version": "snapshot-1.74",
  },
  {
    "version": "1.74.0",
  },
  {
    "version": "snapshot-1.73",
  },
  {
    "version": "1.73.1",
  },
  {
    "version": "snapshot-1.72",
  },
  {
    "version": "snapshot-1.71",
  },
  {
    "version": "1.71.53",
  },
  {
    "version": "1.71.52",
  },
  {
    "version": "1.71.51",
  },
  {
    "version": "1.71.50",
  },
  {
    "version": "1.71.49",
  },
  {
    "version": "1.71.48",
  },
  {
    "version": "1.71.47",
  },
  {
    "version": "1.71.46",
  },
  {
    "version": "1.71.45",
  },
  {
    "version": "1.71.44",
  },
  {
    "version": "1.71.43",
  },
  {
    "version": "1.71.42",
  },
  {
    "version": "1.71.41",
  },
  {
    "version": "1.71.40",
  },
  {
    "version": "1.71.39",
  },
  {
    "version": "1.71.36",
  },
  {
    "version": "1.71.35",
  },
  {
    "version": "1.71.33",
  },
  {
    "version": "1.71.30",
  },
  {
    "version": "1.71.29",
  },
  {
    "version": "1.71.24",
  },
  {
    "version": "1.71.23",
  },
  {
    "version": "1.71.22",
  },
  {
    "version": "1.71.17",
  },
  {
    "version": "1.71.9",
  },
  {
    "version": "1.71.5",
  },
  {
    "version": "1.71.2",
  },
  {
    "version": "snapshot-1.70",
  },
  {
    "version": "snapshot-1.69",
  },
  {
    "version": "snapshot-1.68",
  },
  {
    "version": "snapshot-1.67",
  },
  {
    "version": "snapshot-1.66",
  },
  {
    "version": "snapshot-1.65",
  },
  {
    "version": "1.65.1",
  },
]
`;

exports[`getUI5Versions: Handle error cases while getting UI5 versions:  UI5 versions fallback for specified min UI5 version, if request fails 1`] = `
[
  {
    "version": "1.126.0",
  },
  {
    "version": "1.124.0",
  },
  {
    "version": "1.121.0",
  },
  {
    "version": "1.120.0",
  },
  {
    "version": "1.108.0",
  },
  {
    "version": "1.96.0",
  },
  {
    "version": "1.84.0",
  },
  {
    "version": "1.71.0",
  },
]
`;

exports[`getUI5Versions: Handle error cases while getting UI5 versions:  UI5 versions fallback if official is not available  1`] = `
[
  {
    "version": "1.126.0",
  },
  {
    "version": "1.124.0",
  },
  {
    "version": "1.121.0",
  },
  {
    "version": "1.120.0",
  },
  {
    "version": "1.108.0",
  },
  {
    "version": "1.96.0",
  },
  {
    "version": "1.84.0",
  },
  {
    "version": "1.71.0",
  },
]
`;

exports[`getUI5Versions: Handle error cases while getting UI5 versions:  UI5 versions fallback if snapshot is not available  1`] = `
[
  {
    "version": "1.126.0",
  },
  {
    "version": "1.124.0",
  },
  {
    "version": "1.121.0",
  },
  {
    "version": "1.120.0",
  },
  {
    "version": "1.108.0",
  },
  {
    "version": "1.96.0",
  },
  {
    "version": "1.84.0",
  },
  {
    "version": "1.71.0",
  },
]
`;

exports[`getUI5Versions: Handle fatal cases while getting UI5 versions:  UI5 versions fallback if official is not available  1`] = `
[
  {
    "version": "1.126.0",
  },
  {
    "version": "1.124.0",
  },
  {
    "version": "1.121.0",
  },
  {
    "version": "1.120.0",
  },
  {
    "version": "1.108.0",
  },
  {
    "version": "1.96.0",
  },
  {
    "version": "1.84.0",
  },
  {
    "version": "1.71.0",
  },
]
`;

exports[`getUI5Versions: Handle fatal cases while getting UI5 versions:  UI5 versions fallback if snapshot is not available  1`] = `
[
  {
    "version": "1.126.0",
  },
  {
    "version": "1.124.0",
  },
  {
    "version": "1.121.0",
  },
  {
    "version": "1.120.0",
  },
  {
    "version": "1.108.0",
  },
  {
    "version": "1.96.0",
  },
  {
    "version": "1.84.0",
  },
  {
    "version": "1.71.0",
  },
]
`;
